# docker-volume

./: .gitignore
light-nn/: .gitignore  BUILD  CMakeLists.txt  README  README.md  README_cn.md  build.sh  config.h  config.h.in  executor.h  light-nn.h  net.h  tensor.h
light-nn/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
light-nn/build1/test/: test-all  test-executor  test-net  test-op-attention  test-op-concat  test-op-conv1d  test-op-crf  test-op-eltwise  test-op-embedding  test-op-gelu  test-op-gru  test-op-linear  test-op-lookup-table  test-op-lstm  test-op-pooling1d  test-op-reduction  test-op-relu  test-op-reverse  test-op-rnn-adapter  test-op-scale  test-op-sigmoid  test-op-softmax  test-op-tanh  test-op-weight-wrapper  test-op-weighted-sum  test-tensor
light-nn/examples/: README  linear.cc  linear.json  linear.out  origin.out  test.cc
light-nn/include/: executor.h  light-nn.h  operator-factory.h  operator.h  tensor.h
light-nn/include/operators/: attention.h  concat.h  conv1d.h  conv2d.h  crf.h  eltwise.h  embedding.h  gelu.h  gru.h  linear.h  lookup-table.h  lstm.h  pooling1d.h  reduction.h  relu.h  reverse.h  rnn-adapter.h  scale.h  sigmoid.h  softmax.h  tanh.h  weight-wrapper.h  weighted-sum.h
light-nn/include/utils/: log.h  math-functions.h
light-nn/src/: executor.cc  net.cc  tensor.cc
light-nn/src/operators/: attention.cc  concat.cc  conv1d.cc  conv2d.cc  crf.cc  eltwise.cc  embedding.cc  gelu.cc  gru.cc  linear.cc  lookup-table.cc  lstm.cc  pooling1d.cc  reduction.cc  relu.cc  reverse.cc  rnn-adapter.cc  scale.cc  sigmoid.cc  softmax.cc  tanh.cc  weight-wrapper.cc  weighted-sum.cc
light-nn/src/utils/: math-functions.cc
light-nn/test/: test-executor.cc  test-net.cc  test-op-attention.cc  test-op-concat.cc  test-op-conv1d.cc  test-op-crf.cc  test-op-eltwise.cc  test-op-embedding.cc  test-op-gelu.cc  test-op-gru.cc  test-op-linear.cc  test-op-lookup-table.cc  test-op-lstm.cc  test-op-pooling1d.cc  test-op-reduction.cc  test-op-relu.cc  test-op-reverse.cc  test-op-rnn-adapter.cc  test-op-scale.cc  test-op-sigmoid.cc  test-op-softmax.cc  test-op-tanh.cc  test-op-weight-wrapper.cc  test-op-weighted-sum.cc  test-tensor.cc
(+279 files in other folders)
